--- a/css/styles.css
+++ b/css/styles.css
@@ -132,10 +132,11 @@ nav a:hover {
 }
 
 .philosophy-image {
-  flex: 0 0 300px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  gap: 30px;
 }
 
 .bordered-image {
